deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-example"
spec:
  tls:
  - hosts: 
    - nginx.awsdevopstrainer.com
    secretName: echo-tls
  ingressClassName: nginx
  rules:
  - host: nginx.awsdevopstrainer.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
